Fixes #9708 - Fixing rubocop config so it can be used with houndci

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,3 +27,9 @@ Metrics/ClassLength:
 
 Metrics/AbcSize:
   Enabled: false # should we turn this on?
+
+Style/MethodCalledOnDoEndBlock:
+  Enabled: true
+
+Style/DotPosition:
+  EnforcedStyle: 'leading'
