Fixes #12681 - Support rubocop 0.35.1 by fixing broken rules

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -33,3 +33,7 @@ Style/MethodCalledOnDoEndBlock:
 
 Style/DotPosition:
   EnforcedStyle: 'leading'
+
+Rails/Date:
+  Exclude:
+   - foreman_docker.gemspec
